# Cpp_LAB_4

./: .gitignore  CMakeLists.txt
src/: append_generator.hpp  concat_generator.hpp  filter_generator.hpp  function_generator.hpp  i_generator.hpp  i_transfinite_generator.hpp  insert_at_generator.hpp  insert_at_seq_generator.hpp  lazy_sequence.hpp  lazy_sequence.tpp  lazy_sequence_builder.hpp  main.cpp  map_generator.hpp  ordinal.hpp  ordinal_io.hpp  ordinal_print.cpp  ordinal_print.hpp  prepend_generator.hpp  recurrent_generator.hpp  sequence_generator.hpp
src/LAB2/: CMakeLists.txt  arraysequence.hpp  arraysequence.tpp  immutable_array_sequence.hpp  immutable_list_sequence.hpp  isequencebuilder.hpp  linkedlist.hpp  linkedlist.tpp  listsequence.hpp  listsequence.tpp  main.cpp  mutable_array_sequence.hpp  mutable_list_sequence.hpp  option.hpp  sequence.hpp  sequence.tpp  sequencebuilder.hpp
src/machine_state/: replace_at_generator.hpp
src/streams/: i_input_stream.hpp  i_output_stream.hpp  lazy_input_streams.hpp  lazy_output_streams.hpp  sequence_input_stream.hpp  sequence_output_stream.hpp
statistics/: online_statistics.hpp  sliding_cache.hpp  sliding_median.hpp  statistics_processor.hpp
tests/: append_test.cpp  concat_tests.cpp  filter_generator_tests.cpp  function_generator_tests.cpp  insert_at_seq_generator_tests.cpp  insert_at_tests.cpp  lazy_input_tests.cpp  lazy_output_tests.cpp  lazy_seq_tests.cpp  lazy_sequence_tests.cpp  map_generator_tests.cpp  ordinal_tests.cpp  prepend_generator_tests.cpp  recurrent_generator_tests.cpp  replace_at_generator_tests.cpp  sequence_generator.cpp  sequence_generator_tests.cpp  sequence_stream_tests.cpp  statistics_tests.cpp
